dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(iupdate, 0.1)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC

AM_PROG_CC_C_O






LT_INIT


dnl PKG_CHECK_MODULES(IUPDATE, [ ])




AC_OUTPUT([
Makefile
src/Makefile
src/icrypt/Makefile

])
